--- a/src/uLearn/Properties/Resources.resx
+++ b/src/uLearn/Properties/Resources.resx
@@ -130,4 +130,7 @@
   <data name="ru_RU_dic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\SpellChecking\ru_RU.dic;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="NUnitTestRunner" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\nunittestrunning\nunittestrunner.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
