--- a/src/uLearn/Properties/Resources.resx
+++ b/src/uLearn/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="customPrefixes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\SpellChecking\customPrefixes.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="englishVerbs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\CSharp\VerbInMethodNameValidation\english verbs.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="ru_RU_aff" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\SpellChecking\ru_RU.aff;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
