--- a/src/Core/Properties/Resources.resx
+++ b/src/Core/Properties/Resources.resx
@@ -128,10 +128,10 @@
     <value>..\CSharp\Validators\VerbInMethodNameValidation\english verbs.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="ru_RU_aff" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\SpellChecking\ru_RU.aff;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\SpellChecking\ru_RU.aff;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="ru_RU_dic" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\SpellChecking\ru_RU.dic;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+    <value>..\SpellChecking\ru_RU.dic;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="NUnitTestRunner" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\nunittestrunning\nunittestrunner.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
