--- a/src/Core/Properties/Resources.resx
+++ b/src/Core/Properties/Resources.resx
@@ -139,6 +139,18 @@
   <data name="en_US_dic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\CSharp\Validators\SpellingValidator\en_US.dic;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+	<data name="en_GB_aff" type="System.Resources.ResXFileRef, System.Windows.Forms">
+		<value>..\CSharp\Validators\SpellingValidator\en_GB.aff;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+	</data>
+	<data name="en_GB_dic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+		<value>..\CSharp\Validators\SpellingValidator\en_BG.dic;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+	</data>
+	<data name="la_aff" type="System.Resources.ResXFileRef, System.Windows.Forms">
+		<value>..\CSharp\Validators\SpellingValidator\la.aff;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+	</data>
+	<data name="la_dic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+		<value>..\CSharp\Validators\SpellingValidator\la.dic;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+	</data>
   <data name="NUnitTestRunner" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\nunittestrunning\nunittestrunner.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
