fix dictionary name

--- a/src/Core/Properties/Resources.resx
+++ b/src/Core/Properties/Resources.resx
@@ -143,7 +143,7 @@
 		<value>..\CSharp\Validators\SpellingValidator\en_GB.aff;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
 	</data>
 	<data name="en_GB_dic" type="System.Resources.ResXFileRef, System.Windows.Forms">
-		<value>..\CSharp\Validators\SpellingValidator\en_BG.dic;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+		<value>..\CSharp\Validators\SpellingValidator\en_GB.dic;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
 	</data>
 	<data name="la_aff" type="System.Resources.ResXFileRef, System.Windows.Forms">
 		<value>..\CSharp\Validators\SpellingValidator\la.aff;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
