--- a/src/Core/Properties/Resources.resx
+++ b/src/Core/Properties/Resources.resx
@@ -151,6 +151,9 @@
 	<data name="la_dic" type="System.Resources.ResXFileRef, System.Windows.Forms">
 		<value>..\CSharp\Validators\SpellingValidator\la.dic;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
 	</data>
+	<data name="spelling_exceptions" type="System.Resources.ResXFileRef, System.Windows.Forms">
+		<value>..\CSharp\Validators\SpellingValidator\exceptions.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+	</data>
   <data name="NUnitTestRunner" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\nunittestrunning\nunittestrunner.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
